[package]
name = "ReaperIconCreator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
#axum = "0.8.3"
image = "0.25.6"
rfd = "0.15.3"
#hyper = { version = "1.6.0", features = ["full"] }
#hyper-util = { version = "0.1.11", features = ["full"] }
#tokio = { version = "1.44.2", features = ["full"] }
#tower = "0.5.2"
