[package]
name = "ReaperIconCreator"
version = "0.9.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["serde", "png", "jpeg"] }
rfd = "0.15.3"
serde = "1.0.219"
#axum = "0.8.3"
#hyper = { version = "1.6.0", features = ["full"] }
#hyper-util = { version = "0.1.11", features = ["full"] }
#tokio = { version = "1.44.2", features = ["full"] }
#tower = "0.5.2"
